add_subdirectory(common)
add_subdirectory(integer_multiplication)
add_subdirectory(max_pairwise_product)
add_subdirectory(sort)
add_subdirectory(codility/light_chains)
add_subdirectory(codility/lessons/cyclic_rotation)
add_subdirectory(codility/lessons/odd_occurrences)
add_subdirectory(codility/lessons/tape_equilibrium)
add_subdirectory(codility/aws_challenge)
